public class Main {
    public static void main(String[] args) {
        IPhone iphone = new IPhone();

        // Exemplos de uso
        iphone.selecionarMusica("Santo Espírito");
        iphone.tocar();
        iphone.ligar("11999998888");
        iphone.exibirPagina("https://www.bibliaonline.com.br");
    }
}