public interface ReprodutorMusical {
    void tocar();
    void pausar();
    void pararMusica(String nome);
    void selecionarMusica(String nome);
}